--- a/index.html
+++ b/index.html
@@ -61,19 +61,16 @@
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item">
-        <img src="../img/new/a.jpg" class="d-block w-100" alt="...">
+        <img src="./img/meninas1.JPG" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../img/new/b.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../img/new/c.jpg" class="d-block w-100" alt="...">
+        <img src="./img/girls1.JPG" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item active">
-        <img src="../img/new/d.jpg" class="d-block w-100" alt="...">
+        <img src="./img/meninas02.JPG" class="d-block w-100 h-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../img/new/e.jpg" class="d-block w-100" alt="...">
+        <img src="./img/meninas9.JPG" class="d-block w-100 h-100" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -95,7 +92,7 @@
           <p class="lead"> Com o objetivo primordial na inclusão de mais mulheres na área tecnológica,
              impulsionamos um ambiente saudável e ameno para o aprendizado e a troca de experiências e ideias, conversas e muita diversão.
              </p>
-             <img src="./img/mulheres.jpg" alt="" style="width:100%">
+             <img src="./img/meninas3.JPG" alt="" style="width:100%">
         </div>
       </div>
     </div>
@@ -110,7 +107,7 @@
              que promove a visibilidade feminina na área de tecnologias como redes de computadores, desenvolvimento web, marketing e muito mais.
               Venha fazer parte da nossa família, discuta nos nossos debates,
              e participe dos eventos e faça sugestões.</p>
-             <img src="./img/meetup.jpg" alt="" style="width:100%">
+             <img src="./img/meninas5.jpg" alt="" style="width:100%">
         </div>
       </div>
     </div>
@@ -142,7 +139,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; WomanTechmakersLuanda 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; WomanTechmakersLuanda 2021</p>
 <a href="https://twitter.com/wtmluanda">
 <i class="fa fa-twitter" style="font-size:48px;color:rgb(0, 132, 255)"></i></a>
 
